Successfully add an activity

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,6 +2,7 @@
 
     body {
         background: #edf0f1;
+        padding: 80px 0 0 0;
     }
 
     body input button {
@@ -15,6 +16,7 @@
     header {
         width: 100%;
         height: 80px;
+        background: #25b99a;
 
         position: fixed;
         padding: 15px;
@@ -22,7 +24,6 @@
         left: 0;
         z-index: 5;
 
-        background: #25b99a;
         box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
         border-bottom-right-radius: 10px;
         border-bottom-left-radius: 10px;
@@ -31,6 +32,7 @@
     header input {
         width: 100%;
         height: 50px;
+        background: rgba(255,255,255,0.2);
 
         float: left;
         color: #fff;
@@ -38,7 +40,6 @@
         font-weight: 400;
         text-indent: 18px;
         padding: 0 60px 0 0;
-        background: rgba(255,255,255,0.2);
         border-radius: 5px 25px 25px 5px;
         border: 0px;
         box-shadow: none;
@@ -67,13 +68,13 @@
     header button {
         width: 50px;
         height: 50px;
+        background: #fff;
         
         position: absolute;
         top: 15px;
         right: 15px;
         z-index: 2;
         border-radius:  25px;
-        background: #fff;
         border: 0px;
         box-shadow: none;
         outline: none;
@@ -95,3 +96,119 @@
       header button svg .fill {
         fill: #25b99a;
       }
+
+      .container {
+        width: 100%;
+        float: left;
+        padding: 15px;
+      }
+
+      ul.todo {
+        width: 100%;
+        float: left;  
+      }
+
+      ul.todo li {
+        width: 100%;
+        min-height: 50px;
+        background: #fff;
+
+        float: left;
+        font-size: 14px;
+        font-weight: 500;
+        color: #444;
+        line-height: 22px;
+
+        border-radius: 5px;
+        position: relative;
+        box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
+        margin: 0 0 10px 0;
+        padding: 14px 100px 14px 14px;
+        word-break: break-word;
+      }
+
+      ul.todo li:last-of-type {
+        margin: 0;
+      }
+
+      ul.todo li .buttons {
+        width: 100px;
+        height: 50px;
+
+        position: absolute;
+        top: 0;
+        right: 0;
+      }
+
+      ul.todo li .buttons button {
+        width: 50px;
+        height: 50px;
+        background: none;
+
+        float: left;
+        position: relative;
+        border: 0px;
+        box-shadow: none;
+        outline: none;
+        cursor: pointer;
+
+        -webkit-appearance: none;
+        -moz-appearance: none;
+      }
+
+      ul.todo li .buttons button:last-of-type::before {
+        content: '';
+        width: 1px;
+        height: 30px;
+        background: #edf0f1;
+        
+        position: absolute;
+        top: 10px;
+        left: 0;
+      }
+
+      ul.todo li .buttons button svg {
+        width: 22px;
+        height: 22px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: -11px 0 0 -11px;
+      }
+
+      ul.todo li .buttons button.complete svg {
+        border-radius: 11px;
+        border: 1.5px solid #25b99a;
+
+        transition:background 0.2s ease;
+      }
+
+      ul.todo#completed li .buttons button.complete svg {
+        background: #25b99a;
+        border: 0px;
+      }
+
+      ul.todo:not(#completed) li .buttons button.complete:hover svg {
+        background: rgba(37, 185, 154, 0.40)
+      }
+
+      ul.todo#completed li .buttons button.complete svg .fill {
+        fill: #fff;
+      }
+
+      ul.todo li .buttons button svg .fill {
+        transition: 0.2s ease;
+      }
+
+      ul.todo li .buttons button.remove svg .fill {
+        fill: #c0cecb;
+      }      
+
+      ul.todo li .buttons button.remove:hover svg .fill {
+        fill: #e85656;
+      } 
+
+      ul.todo li .buttons button.complete svg .fill {
+        fill: #25b99a;
+      } 
+      
