--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -212,3 +212,36 @@
         fill: #25b99a;
       } 
       
+      ul.todo#completed {
+        position: relative;
+        padding: 60px 0 0 0;
+      }
+
+      ul.todo#completed::before {
+        width: 150px;
+        height: 1px;
+
+        content: '';
+        background: #d0e5d0;
+        position: absolute;
+        top: 30px;
+        left: 50%;
+        margin: 0 0 0 -75px;
+      }
+
+      ul.todo#todo:empty:after {
+        content: 'You have nothing to-do!';
+      }
+
+      ul.todo#completed:empty:after {
+        content: 'You have yet to completed any tasks.';
+      }
+
+      ul.todo#todo:after,
+      ul.todo#completed::after {
+        width: 100%;
+        display: block;
+        text-align: center;
+        font-size: 12px;
+        color: #aaa;
+      }
